-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
Boot2Qt / NXP i.MX8 QuadMax MEK / Boundary Device NItrogen 8MP / eglfs
-
-
544464c3d (dev), c71131987 (tqtc/lts-6.2), 06f71086d (6.5), 5b0038b33 (6.5)
Opening a FileDialog or FolderDialog on i.MX8 based devices hides the mouse cursor.
To reproduce run the attached example project and open up either of the dialog with a button.
For Gerrit Dashboard: QTBUG-110080 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
467516,4 | QPA:EGLFS - ignore scissor and stencil when drawing the cursor | dev | qt/qtbase | Status: MERGED | +2 | 0 |
473796,1 | QPA:EGLFS - ignore scissor and stencil when drawing the cursor | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
473797,2 | QPA:EGLFS - ignore scissor and stencil when drawing the cursor | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |