QPA:EGLFS - ignore scissor and stencil when drawing the cursor

In QEglFSCursor::draw, There are two missing pipeline states
SCISSOR and STENCIL.

Fixes: QTBUG-110080
Change-Id: Ifb2495de2685b7a2f80f8d39ab57d5985fe0eec1
Reviewed-by: Lisandro Damián Nicanor Pérez Meyer <perezmeyer@gmail.com>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 544464c3d173246e58d39351599b0ffa87ec43df)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>